<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_margin="5sp"
    tools:context="com.accherniakocich.android.appconverter.MainActivity">
    <ScrollView
        android:layout_weight="10"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_1"/>
            <EditText
                android:id="@+id/et2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_2"/>
            <EditText
                android:id="@+id/et3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_3"/>
            <EditText
                android:id="@+id/et4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_4"/>
            <EditText
                android:id="@+id/et5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_5"/>
            <EditText
                android:id="@+id/et6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_6"/>
            <EditText
                android:id="@+id/et7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_7"/>
            <EditText
                android:id="@+id/et8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_8"/>
            <EditText
                android:id="@+id/et9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_9"/>
            <EditText
                android:id="@+id/et10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_10"/>
            <EditText
                android:id="@+id/et11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_11"/>
            <EditText
                android:id="@+id/et12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_12"/>
            <EditText
                android:id="@+id/et13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_13"/>
            <EditText
                android:id="@+id/et14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_14"/>
            <EditText
                android:id="@+id/et15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_15"/>
            <EditText
                android:id="@+id/et16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_16"/>
            <EditText
                android:id="@+id/et17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_17"/>
            <EditText
                android:id="@+id/et18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_18"/>
            <EditText
                android:id="@+id/et19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_19"/>
            <EditText
                android:id="@+id/et20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_20"/>
            <EditText
                android:id="@+id/et21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_21"/>
            <EditText
                android:id="@+id/et22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_22"/>
            <EditText
                android:id="@+id/et23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_23"/>
            <EditText
                android:id="@+id/et24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_24"/>
            <EditText
                android:id="@+id/et25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_25"/>
            <EditText
                android:id="@+id/et26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_26"/>
            <EditText
                android:id="@+id/et27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_27"/>
            <EditText
                android:id="@+id/et28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_28"/>
            <EditText
                android:id="@+id/et29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_29"/>
            <EditText
                android:id="@+id/et30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_30"/>
        </LinearLayout>
    </ScrollView>
    <TableRow
        android:layout_weight="100"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/button_save"
            android:text="@string/button_text_save"
            android:layout_weight="100"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/button_send"
            android:text="@string/button_text_send"
            android:layout_weight="100"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/button_claen"
            android:text="@string/button_text_clean"
            android:layout_weight="100"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </TableRow>
</LinearLayout>
